--- a/app/index.html
+++ b/app/index.html
@@ -5,15 +5,69 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
 
+  <!-- HEADER -->
   <header class="header">
+    <div class="container-fluid">
+      <div class="header__change-lang-desktop">
+        <div class="container">
+          <div class="header__wrapper">
+            <img class="header__arrow-bottom" src="images/arrow-down.svg" alt="">
+            <select class="header__lang">
+              <option value="1">UA</option>
+              <option value="2">EN</option>
+            </select>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <nav class="header__nav">
+        <ul class="header__menu">
+          <li class="header__menu-item">
+            <a href="" class="header__menu-link">
+              <img src="images/Logo.png" alt="logo" class="header__logo">
+            </a>
+          </li>
+          <li class="header__menu-item">
+            Рішення
+            <img src="images/arrow-down.svg" alt="arrow">
+            <ul class="header__dropdown">
+              <li class="header__dropdown-item">Бізнес</li>
+              <li class="header__dropdown-item">Маркетингові рішення</li>
+              <li class="header__dropdown-item">Послуги дизайну</li>
+              <li class="header__dropdown-item">Розробка IT-продуктів</li>
+              <li class="header__dropdown-item">Особистий бренд</li>
+            </ul>
+          </li>
+          <li class="header__menu-item">
+            <a href="" class="header__menu-link">Кар’єра</a>
+          </li>
+          <li class="header__menu-item">
+            <a href="" class="header__menu-link">Зв'яжіться з нами</a>
+          </li>
+        </ul>
+        <div class="header__btn-link">
+          Увійти
+        </div>
+      </nav>
+    </div>
   </header>
+  <!-- HEADER END -->
+
   <div class="wrapper">
-    <main class="main"></main>
+    <main class="main">
+
+    </main>
+
     <footer class="footer"></footer>
   </div>
 
