start work with project

--- a/app/index.html
+++ b/app/index.html
@@ -38,8 +38,10 @@
             </a>
           </li>
           <li class="header__menu-item">
-            Рішення
-            <img src="images/arrow-down.svg" alt="arrow">
+            <p class="header__dropdown-title">
+              Рішення
+              <img class="header__dropdown-img" src="images/arrow-down.svg" alt="arrow">
+            </p>
             <ul class="header__dropdown">
               <li class="header__dropdown-item">Бізнес</li>
               <li class="header__dropdown-item">Маркетингові рішення</li>
