add some layout for top and header

--- a/app/index.html
+++ b/app/index.html
@@ -16,58 +16,63 @@
 
   <!-- HEADER -->
   <header class="header">
-    <div class="container-fluid">
-      <div class="header__change-lang-desktop">
-        <div class="container">
-          <div class="header__wrapper">
-            <img class="header__arrow-bottom" src="images/arrow-down.svg" alt="">
-            <select class="header__lang">
-              <option value="1">UA</option>
-              <option value="2">EN</option>
-            </select>
+    <div class="header__inner">
+      <div class="container-fluid">
+        <div class="header__change-lang-desktop">
+          <div class="header__container">
+            <div class="header__lang">
+              <span class="header__selected-item">UA</span>
+              <img class="header__selected-img" src="images/arrow-down.svg" alt="">
+              <ul class="header__lang-list">
+                <li class="header__lang-item">UA</li>
+                <li class="header__lang-item">EN</li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="container">
-      <nav class="header__nav">
-        <ul class="header__menu">
-          <li class="header__menu-item">
-            <a href="" class="header__menu-link">
-              <img src="images/Logo.png" alt="logo" class="header__logo">
-            </a>
-          </li>
-          <li class="header__menu-item">
-            <p class="header__dropdown-title">
-              Рішення
-              <img class="header__dropdown-img" src="images/arrow-down.svg" alt="arrow">
-            </p>
-            <ul class="header__dropdown">
-              <li class="header__dropdown-item">Бізнес</li>
-              <li class="header__dropdown-item">Маркетингові рішення</li>
-              <li class="header__dropdown-item">Послуги дизайну</li>
-              <li class="header__dropdown-item">Розробка IT-продуктів</li>
-              <li class="header__dropdown-item">Особистий бренд</li>
-            </ul>
-          </li>
-          <li class="header__menu-item">
-            <a href="" class="header__menu-link">Кар’єра</a>
-          </li>
-          <li class="header__menu-item">
-            <a href="" class="header__menu-link">Зв'яжіться з нами</a>
-          </li>
-        </ul>
-        <div class="header__btn-link">
-          Увійти
-        </div>
-      </nav>
+      <div class="container">
+        <nav class="header__nav">
+          <ul class="header__menu">
+            <li class="header__menu-item">
+              <a href="" class="header__menu-link">
+                <img src="images/Logo.png" alt="logo" class="header__logo">
+              </a>
+            </li>
+            <li class="header__menu-item">
+              <p class="header__dropdown-title">
+                Рішення
+                <img class="header__dropdown-img" src="images/arrow-down.svg" alt="arrow">
+              </p>
+              <ul class="header__dropdown">
+                <li class="header__dropdown-item active">Бізнес</li>
+                <li class="header__dropdown-item">Маркетингові рішення</li>
+                <li class="header__dropdown-item">Послуги дизайну</li>
+                <li class="header__dropdown-item">Розробка IT-продуктів</li>
+                <li class="header__dropdown-item">Особистий бренд</li>
+              </ul>
+            </li>
+            <li class="header__menu-item">
+              <a href="" class="header__menu-link">Кар’єра</a>
+            </li>
+            <li class="header__menu-item">
+              <a href="" class="header__menu-link">Зв'яжіться з нами</a>
+            </li>
+          </ul>
+          <div class="header__btn-link">
+            Увійти
+          </div>
+        </nav>
+      </div>
     </div>
   </header>
   <!-- HEADER END -->
 
   <div class="wrapper">
     <main class="main">
+      <section class="top">
 
+      </section>
     </main>
 
     <footer class="footer"></footer>
