add section top and styles

--- a/app/index.html
+++ b/app/index.html
@@ -71,6 +71,31 @@
   <div class="wrapper">
     <main class="main">
       <section class="top">
+        <div class="container">
+          <div class="top__inner">
+            <div class="top__box">
+              <h2 class="top__title">Розумні інструменти</h2>
+              <p class="top__subtitle">для автоматизації та зростання бізнесу</p>
+              <p class="top__description">
+                <span class="top__bold">Qb tools</span> - набір розумних інструментів для автоматизації бізнесу,
+                управління та збільшення продажів, удосконалення маркетингу, ефективної комунікаціїї з клієнтами. Наші
+                рішення забезпечать швидке зростання вашого бізнесу, його діджиталізацію та перебудову
+                внутрішньоорганізаційних процесів на засадах клієнтоорієнтованого підходу
+              </p>
+              <form class="top__form">
+                <span class="top__span">+380</span>
+                <input type="text" class="top__input" placeholder="XXXXXXXXX">
+                <button class="top__btn">Спробувати</button>
+              </form>
+              <p class="top__form-descr">Ми зв'яжемося з вами за декілька хвилин</p>
+            </div>
+            <div class="top__box">
+              <img class="top__img" src="images/top-img.png" alt="">
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="cards">
 
       </section>
     </main>
