--- a/app/index.html
+++ b/app/index.html
@@ -171,7 +171,7 @@
                         <a href="" class="header__dropdown-link-2">Додаток QB tools для співробітників</a>
                       </li>
                       <li class="header__dropdown-item-2">
-                        <a href="" class="header__dropdown-link-2">Технологія QR кодування</a>
+                        <a href="/pages/qr-code/" class="header__dropdown-link-2">Технологія QR кодування</a>
                       </li>
                       <li class="header__dropdown-item-2">
                         <a href="" class="header__dropdown-link-2">Маркетингові інструменти</a>
