--- a/app/pages/qr-code/index.html
+++ b/app/pages/qr-code/index.html
@@ -357,6 +357,9 @@
                             <div class="opportunities__item">
                                 <img src="/images/opportunities/opportunities-2.png" alt="" class="opportunities__img">
                             </div>
+                            <button class="opportunities__main-btn mobile">
+                                Залишити заявку
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -376,8 +379,43 @@
                                 </div>
                             </div>
                             <div class="opportunities__item">
-                                <img src="/images/opportunities/opportunities-2.png" alt="" class="opportunities__img">
+                                <img src="/images/opportunities/opportunities-3.png" alt="" class="opportunities__img">
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="integrations">
+                <div class="container">
+                    <div class="integrations__title">Інтеграції</div>
+                    <div class="integrations__inner">
+                        <div class="integrations__item">
+                            <img src="/images/integrations/img-1.png" alt="">
+                        </div>
+                        <div class="integrations__item">
+                            <img src="/images/integrations/img-2.png" alt="">
+                        </div>
+                        <div class="integrations__item">
+                            <img src="/images/integrations/img-3.png" alt="">
+                        </div>
+                        <div class="integrations__item">
+                            <img src="/images/integrations/img-4.png" alt="">
+                        </div>
+                        <div class="integrations__item">
+                            <img src="/images/integrations/img-5.png" alt="">
+                        </div>
+                        <div class="integrations__item">
+                            <img src="/images/integrations/img-6.png" alt="">
+                        </div>
+                        <div class="integrations__item">
+                            <img src="/images/integrations/img-7.png" alt="">
+                        </div>
+                        <div class="integrations__item">
+                            <img src="/images/integrations/img-8.png" alt="">
+                        </div>
+                        <div class="integrations__item">
+                            <img src="/images/integrations/img-9.png" alt="">
                         </div>
                     </div>
                 </div>
