--- a/app/pages/career/index.html
+++ b/app/pages/career/index.html
@@ -276,6 +276,27 @@
                 </div>
             </section>
 
+            <section class="mission">
+                <div class="container">
+                    <div class="mission__box">
+                        <div class="mission__box-title">Наша місія</div>
+                        <div class="mission__box-descr">
+                            Ми розвиваємо та автоматизуємо бізнеси наших клієнтів завдяки сміливому та рішучому духу та
+                            надаємо найнадійніший комплексний досвід впровадження digital інструментів та рішень
+                        </div>
+                    </div>
+                    <div class="mission__inner">
+                        <img src="" alt="" class="mission__img">
+                        <div class="mission__item">
+                            <div class="mission__item-title">Трансформуємо та покращуємо досвід наших клієнтів</div>
+                            <div class="mission__item-descr">
+                                Трансформуємо та покращуємо досвід наших клієнтів
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
             <section class="contact">
                 <div class="container">
                     <div class="contact__inner">
