--- a/app/pages/qb-tools/index.html
+++ b/app/pages/qb-tools/index.html
@@ -248,7 +248,7 @@
 
     <div class="wrapper">
         <main class="main">
-            <section class="top ">
+            <section class="top qb-tools">
                 <div class="container">
                     <div class="top__inner">
                         <div class="top__box">
@@ -276,6 +276,37 @@
                     </div>
                 </div>
             </section>
+
+            <section class="description-card">
+                <div class="container">
+                    <div class="description-card__inner">
+                        <div class="description-card__card">
+                            <div class="description-card__content">
+                                <div class="description-card__title">Керування замовленнями</div>
+                                <div class="description-card__descr">
+                                    З додатком QB tools ви маєте можливість приймати замовлення від клієнтів
+                                    безпосередньо у мобільному додатку, змінювати статуси замовлень та продивлятися
+                                    детальну інформацію
+                                </div>
+                            </div>
+                            <img class="description-card__img" src="/images/description-card/qb-tools-1.png" alt="">
+                        </div>
+                        <div class="description-card__card">
+                            <div class="description-card__content">
+                                <div class="description-card__title">Робота з відгуками</div>
+                                <div class="description-card__descr">
+                                    Приймайте та оброблюйте відгуки і оцінки отримані від клієнтів у єдиному місці -
+                                    мобільному додатку QB tools для співробітників. Зручна функція відправки SMS
+                                    повідомлення на відгук дозволить вам оперативно реагувати на усі зауваження від
+                                    клієнтів в один клік прямо з додатку
+                                </div>
+                            </div>
+                            <img class="description-card__img" src="/images/description-card/qb-tools-2.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </section>
+
 
             <section class="opportunities revers qb-tools">
                 <div class="container">
@@ -350,7 +381,7 @@
             <section class="qr-code">
                 <div class="container">
                     <div class="qr-code__inner">
-                        <img src="/images/qr-code/qr-code-1.png" alt="" class="qr-code__img">
+                        <img src="/images/qr-code/qr-code-3.png" alt="" class="qr-code__img">
                         <div class="qr-code__content">
                             <h4 class="qr-code__title">Переконайтесь особисто</h4>
                             <p class="qr-code__descr">Спеціально для вас ми підготували 🖥️ демонстрацію сервісу
@@ -358,19 +389,32 @@
                                 функціональності його використання</p>
                             <div class="qr-code__subtitle">Скануй QR код</div>
                             <div class="qr-code__subdescr">та ознайомся з можливостями</div>
-                            <a href="https://qrboss.com.ua/R0vZ" class="qr-code__btn">Ознайомитися</a>
+                            <a href="https://apps.apple.com/ua/app/qb-tools/id6447362075?l=uk" class="qr-code__btn-app">
+                                <img src="/images/app-store.svg" alt="app">
+                            </a>
+                            <a href="https://play.google.com/store/apps/details?id=com.qbtools"
+                                class="qr-code__btn-app">
+                                <img src="/images/gogle.svg" alt="app">
+                            </a>
                         </div>
                     </div>
                     <div class="qr-code__mobile">
                         <div class="qr-code__mobile-title">Переходь за посиланням</div>
                         <div class="qr-code__mobile-descr">та ознайомся з можливостями</div>
-                        <a href="https://qrboss.com.ua/R0vZ" class="qr-code__mobile-btn">Ознайомитися</a>
+                        <a href="https://apps.apple.com/ua/app/qb-tools/id6447362075?l=uk"
+                            class="qr-code__btn-app mobile">
+                            <img src="/images/app-store.svg" alt="app">
+                        </a>
+                        <a href="https://play.google.com/store/apps/details?id=com.qbtools"
+                            class="qr-code__btn-app mobile">
+                            <img src="/images/gogle.svg" alt="app">
+                        </a>
                     </div>
                 </div>
             </section>
 
 
-            <section class="partners">
+            <section class="partners qb-tools">
                 <div class="partners__background">
                     <img src="/images/partners/bg-partner.png" alt="">
                 </div>
