--- a/app/pages/horeca/index.html
+++ b/app/pages/horeca/index.html
@@ -252,13 +252,10 @@
                 <div class="container">
                     <div class="top__inner">
                         <div class="top__box">
-                            <h2 class="top__title">Розумні інструменти</h2>
-                            <p class="top__subtitle">для автоматизації та зростання бізнесу</p>
+                            <h2 class="top__title">Рішення для HoReCa</h2>
                             <p class="top__description">
-                                <span class="top__bold">Qb tools</span> - набір 💡 розумних інструментів для
-                                автоматизації бізнесу,
-                                управління і збільшення продажів, удосконалення маркетингу та ефективної комунікаціїї з
-                                клієнтами
+                                Автоматизуйте свій ресторан, кав'ярню або кейтерингову компанію нашими мобільними і
+                                безконтактними технологіями
                             </p>
                             <form class="top__form">
                                 <input type="text" class="top__input" placeholder="(ХХ) ХХХ-ХХ-ХХ">
@@ -267,7 +264,7 @@
                             <p class="top__form-descr">Ми зв'яжемося з вами за декілька хвилин</p>
                         </div>
                         <div class="top__box">
-                            <img class="top__img" src="/images/top/horeca-bg.png" alt="">
+                            <img class="top__img" src="/images/top/horeca-main.png" alt="">
                         </div>
                         <form class="top__form mobile">
                             <span class="top__span">+380</span>
@@ -279,146 +276,84 @@
                 </div>
             </section>
 
-            <section class="table">
+            <section class="opportunities revers qb-tools">
                 <div class="container">
-                    <div class="table__inner">
-                        <div class="table__header">
-                            <div class="table__row-title">
-                                <h5 class="table__row-title-text">Рішення QB tools</h5>
-                            </div>
-                            <div class="table__row-checkmark">
-                                <h5 class="table__checkmark-title">Standart</h5>
-                                <p class="table__checkmark-price-month">520 <span class="span">грн / місяць</span></p>
-                                <p class="table__checkmark-price-year">5 200 <span class="span">грн / рік</span> <span
-                                        class="sale">-15%</span></p>
-                            </div>
-                            <div class="table__row-checkmark">
-                                <h5 class="table__checkmark-title">Smart</h5>
-                                <p class="table__checkmark-price-month">1 990 <span class="span">грн / місяць</span></p>
-                                <p class="table__checkmark-price-year">19 990 <span class="span">грн / рік</span> <span
-                                        class="sale">-15%</span></p>
-                            </div>
-                            <div class="table__row-checkmark">
-                                <h5 class="table__checkmark-title">Professional</h5>
-                                <p class="table__checkmark-price-month">2 490 <span class="span">грн / місяць</span></p>
-                                <p class="table__checkmark-price-year">24 900 <span class="span">грн / рік</span> <span
-                                        class="sale">-15%</span></p>
-                            </div>
-                        </div>
-                        <div class="table__body">
-                            <div class="table__col">
-                                <div class="table__col-title">QR код All in One</div>
-                                <div class="table__col-checkmark">
-                                    <img src="/images/table/chek-orange.png" alt="" class="checkmark-img">
-                                </div>
-                                <div class="table__col-checkmark">
-                                    <img src="/images/table/chek-gray.png" alt="" class="checkmark-img">
-                                </div>
-                                <div class="table__col-checkmark">
-                                    <img src="/images/table/chek-orange.png" alt="" class="checkmark-img">
+                    <div class="opportunities__inner">
+                        <div class="opportunities__items">
+                            <div class="opportunities__item">
+                                <div class="opportunities__teext-box">
+                                    <h4 class="opportunities__title">Маркетингові можливості</h4>
+                                    <p class="opportunities__descr">
+                                        Додаток QB tools дозволяє вести оперативну комунікацію з усіма вашими клієнтами
+                                        завдяки вбудованій у додаток функціі відправки PUSH-повідомлень прямо з додатку
+                                        усім клієнтам або вибірково певним клієнтам окремо
+                                    </p>
                                 </div>
                             </div>
-                            <div class="table__col">
-                                <div class="table__col-title">Сервіс зворотного зв’язку QR BOSS</div>
-                                <div class="table__col-checkmark">
-                                    <img src="/images/table/chek-orange.png" alt="" class="checkmark-img">
-                                </div>
-                                <div class="table__col-checkmark">
-                                    <img src="/images/table/chek-gray.png" alt="" class="checkmark-img">
-                                </div>
-                                <div class="table__col-checkmark">
-                                    <img src="/images/table/chek-orange.png" alt="" class="checkmark-img">
-                                </div>
-                            </div>
-                            <div class="table__col">
-                                <div class="table__col-title">Сайт для замовлень з оплатою Apple Pay та Google Pay</div>
-                                <div class="table__col-checkmark">
-                                    <img src="/images/table/chek-orange.png" alt="" class="checkmark-img">
-                                </div>
-                                <div class="table__col-checkmark">
-                                    <img src="/images/table/chek-gray.png" alt="" class="checkmark-img">
-                                </div>
-                                <div class="table__col-checkmark">
-                                    <img src="/images/table/chek-orange.png" alt="" class="checkmark-img">
-                                </div>
-                            </div>
-                            <div class="table__col">
-                                <div class="table__col-title">Online-меню</div>
-                                <div class="table__col-checkmark">
-                                    <img src="/images/table/chek-orange.png" alt="" class="checkmark-img">
-                                </div>
-                                <div class="table__col-checkmark">
-                                    <img src="/images/table/chek-gray.png" alt="" class="checkmark-img">
-                                </div>
-                                <div class="table__col-checkmark">
-                                    <img src="/images/table/chek-orange.png" alt="" class="checkmark-img">
-                                </div>
-                            </div>
-                            <div class="table__col">
-                                <div class="table__col-title">Виклик офіціанта</div>
-                                <div class="table__col-checkmark">
-                                    <img src="/images/table/chek-orange.png" alt="" class="checkmark-img">
-                                </div>
-                                <div class="table__col-checkmark">
-                                    <img src="/images/table/chek-gray.png" alt="" class="checkmark-img">
-                                </div>
-                                <div class="table__col-checkmark">
-                                    <img src="/images/table/chek-orange.png" alt="" class="checkmark-img">
-                                </div>
-                            </div>
-                            <div class="table__col">
-                                <div class="table__col-title">Оренда мобільного додатку для замовлень і лояльності</div>
-                                <div class="table__col-checkmark">
-                                    <img src="/images/table/chek-gray.png" alt="" class="checkmark-img">
-                                </div>
-                                <div class="table__col-checkmark">
-                                    <img src="/images/table/chek-orange.png" alt="" class="checkmark-img">
-                                </div>
-                                <div class="table__col-checkmark">
-                                    <img src="/images/table/chek-orange.png" alt="" class="checkmark-img">
-                                </div>
-                            </div>
-                            <div class="table__col">
-                                <div class="table__col-title">Додаток кур’єра QB Courier</div>
-                                <div class="table__col-checkmark">
-                                    <img src="/images/table/chek-orange.png" alt="" class="checkmark-img">
-                                </div>
-                                <div class="table__col-checkmark">
-                                    <img src="/images/table/chek-orange.png" alt="" class="checkmark-img">
-                                </div>
-                                <div class="table__col-checkmark">
-                                    <img src="/images/table/chek-orange.png" alt="" class="checkmark-img">
-                                </div>
-                            </div>
-                            <div class="table__col">
-                                <div class="table__col-title">Додаток для співробітників QB tools</div>
-                                <div class="table__col-checkmark">
-                                    <img src="/images/table/chek-orange.png" alt="" class="checkmark-img">
-                                </div>
-                                <div class="table__col-checkmark">
-                                    <img src="/images/table/chek-orange.png" alt="" class="checkmark-img">
-                                </div>
-                                <div class="table__col-checkmark">
-                                    <img src="/images/table/chek-orange.png" alt="" class="checkmark-img">
-                                </div>
-                            </div>
-                            <div class="table__col">
-                                <div class="table__col-title">Iнтеграція з POS системами (Poster, Syrve (iiko), R-keeper
-                                    та інші). Синхронізація меню, замовлень, оплат</div>
-                                <div class="table__col-checkmark">
-                                    <img src="/images/table/chek-orange.png" alt="" class="checkmark-img">
-                                </div>
-                                <div class="table__col-checkmark">
-                                    <img src="/images/table/chek-orange.png" alt="" class="checkmark-img">
-                                </div>
-                                <div class="table__col-checkmark">
-                                    <img src="/images/table/chek-orange.png" alt="" class="checkmark-img">
-                                </div>
+                            <div class="opportunities__item">
+                                <img src="/images/opportunities/opportunities-qb-tools.png" alt=""
+                                    class="opportunities__img">
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
+
+            <section class="opportunities qb-tools">
+                <div class="container">
+                    <div class="opportunities__inner">
+                        <div class="opportunities__items">
+                            <div class="opportunities__item">
+                                <div class="opportunities__teext-box">
+                                    <h4 class="opportunities__title">Детальна аналітика</h4>
+                                    <p class="opportunities__descr">
+                                        Переглядайте детальну аналітичну інформацію по локації або компанії вцілому з
+                                        отриманих відгуків - їх кількості, оцінок, а також показників NPS, CSAT, CES.
+                                        Продивляйтесь аналітику з отриманих замовлень, їх кількості, показників
+                                        середнього чеку, виручки, списаних бонусів та витрат клієнтів на доставку
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="opportunities__item">
+                                <img src="/images/opportunities/opportunities-qb-tools-2.png" alt=""
+                                    class="opportunities__img">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="description-card">
+                <div class="container">
+                    <div class="description-card__inner">
+                        <div class="description-card__card">
+                            <div class="description-card__content">
+                                <div class="description-card__title">Керування замовленнями</div>
+                                <div class="description-card__descr">
+                                    З додатком QB tools ви маєте можливість приймати замовлення від клієнтів
+                                    безпосередньо у мобільному додатку, змінювати статуси замовлень та продивлятися
+                                    детальну інформацію
+                                </div>
+                            </div>
+                            <img class="description-card__img" src="/images/description-card/qb-tools-1.png" alt="">
+                        </div>
+                        <div class="description-card__card">
+                            <div class="description-card__content">
+                                <div class="description-card__title">Робота з відгуками</div>
+                                <div class="description-card__descr">
+                                    Приймайте та оброблюйте відгуки і оцінки отримані від клієнтів у єдиному місці -
+                                    мобільному додатку QB tools для співробітників. Зручна функція відправки SMS
+                                    повідомлення на відгук дозволить вам оперативно реагувати на усі зауваження від
+                                    клієнтів в один клік прямо з додатку
+                                </div>
+                            </div>
+                            <img class="description-card__img" src="/images/description-card/qb-tools-2.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="telegram"></section>
 
             <section class="partners">
                 <div class="container">
