--- a/app/pages/qr-code/index.html
+++ b/app/pages/qr-code/index.html
@@ -170,15 +170,16 @@
                                                     замовлень</a>
                                             </li>
                                             <li class="header__dropdown-item-2">
-                                                <a href="" class="header__dropdown-link-2">Сервіс зворотного зв’язку QR
-                                                    BOSS</a>
+                                                <a href="/pages/feedback/" class="header__dropdown-link-2">Сервіс
+                                                    зворотного зв’язку QR BOSS</a>
                                             </li>
                                             <li class="header__dropdown-item-2">
                                                 <a href="" class="header__dropdown-link-2">Додаток QB tools для
                                                     співробітників</a>
                                             </li>
                                             <li class="header__dropdown-item-2">
-                                                <a href="" class="header__dropdown-link-2">Технологія QR кодування</a>
+                                                <a href="/pages/qr-code/" class="header__dropdown-link-2">Технологія QR
+                                                    кодування</a>
                                             </li>
                                             <li class="header__dropdown-item-2">
                                                 <a href="" class="header__dropdown-link-2">Маркетингові інструменти</a>
@@ -187,18 +188,114 @@
                                     </li>
                                     <li class="header__dropdown-item">
                                         <a href="" class="header__dropdown-link">Рішення для Інтернет-торгівлі</a>
+                                        <ul class="header__dropdown-list-2">
+                                            <li class="header__dropdown-item-2">
+                                                <a href="" class="header__dropdown-link-2">Мобільний додаток
+                                                    магазину</a>
+                                            </li>
+                                            <li class="header__dropdown-item-2">
+                                                <a href="" class="header__dropdown-link-2">Web-сайт для замовлень і
+                                                    лояльності</a>
+                                            </li>
+                                            <li class="header__dropdown-item-2">
+                                                <a href="/pages/feedback/" class="header__dropdown-link-2">Сервіс
+                                                    зворотного зв’язку QR BOSS</a>
+                                            </li>
+                                            <li class="header__dropdown-item-2">
+                                                <a href="" class="header__dropdown-link-2">Додаток QB tools для
+                                                    співробітників</a>
+                                            </li>
+                                            <li class="header__dropdown-item-2">
+                                                <a href="/pages/qr-code/" class="header__dropdown-link-2">Технологія QR
+                                                    кодування</a>
+                                            </li>
+                                            <li class="header__dropdown-item-2">
+                                                <a href="" class="header__dropdown-link-2">Маркетингові інструменти</a>
+                                            </li>
+                                        </ul>
                                     </li>
                                     <li class="header__dropdown-item">
                                         <a href="" class="header__dropdown-link">Рішення для дистриб’юторів</a>
+                                        <ul class="header__dropdown-list-2">
+                                            <li class="header__dropdown-item-2">
+                                                <a href="" class="header__dropdown-link-2">Мобільний додаток для
+                                                    дистриб’юторів</a>
+                                            </li>
+                                            <li class="header__dropdown-item-2">
+                                                <a href="" class="header__dropdown-link-2">Web-сайт для замовлень і
+                                                    лояльності</a>
+                                            </li>
+                                            <li class="header__dropdown-item-2">
+                                                <a href="/pages/feedback/" class="header__dropdown-link-2">Сервіс
+                                                    зворотного зв’язку QR BOSS</a>
+                                            </li>
+                                            <li class="header__dropdown-item-2">
+                                                <a href="" class="header__dropdown-link-2">Додаток QB tools для
+                                                    співробітників</a>
+                                            </li>
+                                            <li class="header__dropdown-item-2">
+                                                <a href="" class="header__dropdown-link-2">Маркетингові інструменти</a>
+                                            </li>
+                                        </ul>
                                     </li>
                                     <li class="header__dropdown-item">
                                         <a href="" class="header__dropdown-link">Рішення для доставки води</a>
+                                        <ul class="header__dropdown-list-2">
+                                            <li class="header__dropdown-item-2">
+                                                <a href="" class="header__dropdown-link-2">Мобільний додаток для
+                                                    замовлень і доставки</a>
+                                            </li>
+                                            <li class="header__dropdown-item-2">
+                                                <a href="/pages/feedback/" class="header__dropdown-link-2">Сервіс
+                                                    зворотного зв’язку QR BOSS</a>
+                                            </li>
+                                            <li class="header__dropdown-item-2">
+                                                <a href="" class="header__dropdown-link-2">Додаток QB tools для
+                                                    співробітників</a>
+                                            </li>
+                                            <li class="header__dropdown-item-2">
+                                                <a href="" class="header__dropdown-link-2">Маркетингові інструменти</a>
+                                            </li>
+                                        </ul>
                                     </li>
                                     <li class="header__dropdown-item">
                                         <a href="" class="header__dropdown-link">Рішення для спорту</a>
+                                        <ul class="header__dropdown-list-2">
+                                            <li class="header__dropdown-item-2">
+                                                <a href="" class="header__dropdown-link-2">Система Abonement</a>
+                                            </li>
+                                            <li class="header__dropdown-item-2">
+                                                <a href="/pages/feedback/" class="header__dropdown-link-2">Сервіс
+                                                    зворотного зв’язку QR BOSS</a>
+                                            </li>
+                                            <li class="header__dropdown-item-2">
+                                                <a href="" class="header__dropdown-link-2">Маркетингові інструменти</a>
+                                            </li>
+                                        </ul>
                                     </li>
                                     <li class="header__dropdown-item">
                                         <a href="" class="header__dropdown-link">Послуги дизайну</a>
+                                        <ul class="header__dropdown-list-2">
+                                            <li class="header__dropdown-item-2">
+                                                <a href="" class="header__dropdown-link-2">Логотипи, торгові марки та
+                                                    знаки</a>
+                                            </li>
+                                            <li class="header__dropdown-item-2">
+                                                <a href="" class="header__dropdown-link-2">Фірмовий стиль</a>
+                                            </li>
+                                            <li class="header__dropdown-item-2">
+                                                <a href="" class="header__dropdown-link-2">Дизайн Web-сайтів та
+                                                    лендінг-пейдж</a>
+                                            </li>
+                                            <li class="header__dropdown-item-2">
+                                                <a href="" class="header__dropdown-link-2">Дизайн упаковки, етикетки,
+                                                    меню</a>
+                                            </li>
+                                            <li class="header__dropdown-item-2">
+                                                <a href="" class="header__dropdown-link-2">Дизайн рекламної та
+                                                    поліграфічної продукції</a>
+                                            </li>
+                                        </ul>
                                     </li>
                                     <li class="header__dropdown-item">
                                         <a href="" class="header__dropdown-link">Маркетингові рішення</a>
@@ -432,13 +529,13 @@
                                 функціональності його використання</p>
                             <div class="qr-code__subtitle">Скануй QR код</div>
                             <div class="qr-code__subdescr">та ознайомся з можливостями</div>
-                            <a href="https://qrboss.com.ua/R0vZ" class="qr-code__btn">Ознайомитися</a>
+                            <a href="https://qrboss.com.ua/willow.tree" class="qr-code__btn">Ознайомитися</a>
                         </div>
                     </div>
                     <div class="qr-code__mobile">
                         <div class="qr-code__mobile-title">Переходь за посиланням</div>
                         <div class="qr-code__mobile-descr">та ознайомся з можливостями</div>
-                        <a href="https://qrboss.com.ua/R0vZ" class="qr-code__mobile-btn">Ознайомитися</a>
+                        <a href="https://qrboss.com.ua/willow.tree" class="qr-code__mobile-btn">Ознайомитися</a>
                     </div>
                 </div>
             </section>
