--- a/app/index.html
+++ b/app/index.html
@@ -494,7 +494,7 @@
       </section>
       <section class="partners">
         <div class="partners__background">
-          <img src="/images/partners/bg-partner.png" alt="">
+          <img src="/images/bg-lines.svg" alt="">
         </div>
         <div class="container">
           <h2 class="partners__title">Вже користуються нашими рішеннями</h2>
