--- a/app/pages/brend/index.html
+++ b/app/pages/brend/index.html
@@ -424,7 +424,7 @@
             <section class="mult">
                 <div class="container">
                     <div class="mult__inner">
-                        <img src="" alt="" class="mult__img">
+                        <img src="/images/mult.png" alt="" class="mult__img">
                         <div class="mult__boxes">
                             <div class="mult__box">
                                 <div class="mult__title">Соціальні мережі</div>
@@ -448,7 +448,7 @@
             <section class="qr-code">
                 <div class="container">
                     <div class="qr-code__inner">
-                        <img src="/images/qr-code/qr-code-3.png" alt="" class="qr-code__img">
+                        <img src="/images/qr-code/brend.png" alt="" class="qr-code__img">
                         <div class="qr-code__content">
                             <h4 class="qr-code__title">Переконайтесь особисто</h4>
                             <p class="qr-code__descr">Спеціально для вас ми підготували 🖥️ демонстрацію сервісу
@@ -456,13 +456,13 @@
                                 функціональності його використання</p>
                             <div class="qr-code__subtitle">Скануй QR код</div>
                             <div class="qr-code__subdescr">та ознайомся з можливостями</div>
-                            <a href="https://qrboss.com.ua/R0vZ" class="qr-code__btn">Ознайомитися</a>
+                            <a href="https://qrboss.com.ua/orientalcase" class="qr-code__btn">Ознайомитися</a>
                         </div>
                     </div>
                     <div class="qr-code__mobile">
                         <div class="qr-code__mobile-title">Переходь за посиланням</div>
                         <div class="qr-code__mobile-descr">та ознайомся з можливостями</div>
-                        <a href="https://qrboss.com.ua/R0vZ" class="qr-code__mobile-btn">Ознайомитися</a>
+                        <a href="https://qrboss.com.ua/orientalcase" class="qr-code__mobile-btn">Ознайомитися</a>
                     </div>
                 </div>
             </section>
@@ -609,7 +609,7 @@
             </section>
 
 
-            <section class="partners">
+            <section class="partners brend">
                 <div class="partners__background">
                     <img src="/images/partners/bg-partner.png" alt="">
                 </div>
