--- a/app/pages/career/index.html
+++ b/app/pages/career/index.html
@@ -286,11 +286,13 @@
                         </div>
                     </div>
                     <div class="mission__inner">
-                        <img src="" alt="" class="mission__img">
+                        <img src="/images/mision.png" alt="" class="mission__img">
                         <div class="mission__item">
                             <div class="mission__item-title">Трансформуємо та покращуємо досвід наших клієнтів</div>
                             <div class="mission__item-descr">
-                                Трансформуємо та покращуємо досвід наших клієнтів
+                                У QB tools ми робимо великі справи – і хочемо, щоб ви були частиною цього. Ми
+                                намагаємося удосконалити світ, трансформуючи та покращуючи досвід використання клієнтами
+                                наших digital рішень
                             </div>
                         </div>
                     </div>
@@ -301,7 +303,7 @@
                 <div class="container">
                     <div class="contact__inner">
                         <div class="contact__box">
-                            <h2 class="contact__title">Спробуйте наші рішення</h2>
+                            <h2 class="contact__title">Приєднуйтесь до нашої команди</h2>
                             <p class="contact__descr">Будь ласка, заповніть форму і один з наших менеджерів зв’яжеться з
                                 вами за
                                 декілька хвилин</p>
