--- a/app/pages/feedback/index.html
+++ b/app/pages/feedback/index.html
@@ -465,6 +465,9 @@
             </section>
 
             <section class="buisnes">
+                <div class="bg-image">
+                    <img src="/images/bg-buisnes.svg" alt="">
+                </div>
                 <div class="container">
                     <div class="buisnes__title">QR BOSS для вашого бізнесу</div>
                     <div class="buisnes__inner">
@@ -508,6 +511,12 @@
             </section>
 
             <section class="yes-no">
+                <div class="bg-image-yes">
+                    <img src="/images/bg-top-yes.png" alt="">
+                </div>
+                <div class="bg-image-yes-no">
+                    <img src="/images/bg-yes-no.svg" alt="">
+                </div>
                 <div class="container">
                     <div class="yes-no__title">Більше продажів через відгуки - <span class="bg-span">це можливо!</span>
                     </div>
