--- a/app/pages/qr-code/index.html
+++ b/app/pages/qr-code/index.html
@@ -346,6 +346,9 @@
     <div class="wrapper">
         <main class="main">
             <section class="top qr-boss">
+                <div class="bg-top-1">
+                    <img src="/images/top-section.svg" alt="">
+                </div>
                 <div class="container">
                     <div class="top__inner">
                         <div class="top__box">
