--- a/app/pages/marketing/index.html
+++ b/app/pages/marketing/index.html
@@ -397,6 +397,11 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="table__buttons-inner">
+                            <div class="table__buttons marketing">
+                                <a href=#" class="table__btn">Спробувати</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
