--- a/app/pages/feedback/index.html
+++ b/app/pages/feedback/index.html
@@ -656,6 +656,12 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="table__buttons-inner">
+                            <div class="table__buttons">
+                                <a href=#" class="table__btn">Спробувати</a>
+                                <a href=#" class="table__btn">Спробувати</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -710,7 +716,7 @@
 
             <section class="partners">
                 <div class="partners__background">
-                    <img src="/images/partners/bg-partner.png" alt="">
+                    <img src="/images/bg-lines.svg" alt="">
                 </div>
                 <div class="container">
                     <h2 class="partners__title">Вже користуються нашими рішеннями</h2>
